--- a/app/src/main/res/layout/item_termino.xml
+++ b/app/src/main/res/layout/item_termino.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.cardview.widget.CardView android:id="@+id/card_view_ticket"
+<androidx.cardview.widget.CardView android:id="@+id/card_view_termino"
     android:clickable="true"
     android:focusable="true"
     android:foreground="?android:attr/selectableItemBackground"
@@ -17,26 +17,39 @@
     xmlns:card_view="http://schemas.android.com/tools">
 
     <RelativeLayout
-        android:id="@+id/MateriaLayout"
+        android:id="@+id/TerminoLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="16dp">
         <LinearLayout
-            android:id="@+id/nombreMateriaLayout"
+            android:id="@+id/nombreTerminoLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal">
-            <!--Nombre materia-->
+            <!--Nombre termino-->
             <TextView
-                android:id="@+id/nombreMateriaCardID"
+                android:id="@+id/nombreTerminoCardID"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:text="Materia" />
         </LinearLayout>
+        <LinearLayout
+            android:id="@+id/imagenTerminoLayout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+            <!--Imagen termino termino-->
+            <ImageView
+                android:id="@+id/imagenTerminoCardID"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                />
+
+        </LinearLayout>
 
         <LinearLayout
-            android:id="@+id/botonesLayout"
+            android:id="@+id/botonesTerminoLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="horizontal"
@@ -44,32 +57,31 @@
             android:paddingLeft="40dp">
             <!--Botones-->
             <Button
-                android:id="@+id/btnEditarMateria"
+                android:id="@+id/btnEditarTermino"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Editar" />
             <TextView
-                android:id="@+id/referenciaMateriaCardID"
+                android:id="@+id/referenciaTerminoCardID"
                 android:visibility="gone"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:text="" />
             <TextView
-                android:id="@+id/descripcionMateriaCardID"
+                android:id="@+id/descripcionTerminoCardID"
                 android:visibility="gone"
                 android:layout_width="0dp"
                 android:layout_weight="1"
                 android:layout_height="wrap_content"
                 android:text="" />
-        </LinearLayout>
-        <LinearLayout
-            android:id="@+id/colorMateriaLayout"
-            android:layout_width="200dp"
-            android:layout_height="20dp"
-            android:orientation="vertical"
-            android:layout_marginTop="100dp"
-            android:background="@color/black">
+            <TextView
+                android:id="@+id/urlImagenTerminoCardID"
+                android:visibility="gone"
+                android:layout_width="0dp"
+                android:layout_weight="1"
+                android:layout_height="wrap_content"
+                android:text="" />
         </LinearLayout>
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
