--- a/app/src/main/res/layout/administrador_lista_terminos.xml
+++ b/app/src/main/res/layout/administrador_lista_terminos.xml
@@ -18,8 +18,8 @@
 
     <TextView
         android:id="@+id/txtMateriaActual"
-        android:layout_width="142dp"
-        android:layout_height="38dp"
+        android:layout_width="313dp"
+        android:layout_height="44dp"
         android:text="Materia"
         android:textColor="#000000"
         android:textSize="25sp"
@@ -29,7 +29,9 @@
         app:layout_constraintHorizontal_bias="0.458"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.103" />
+        app:layout_constraintVertical_bias="0.103"
+        android:gravity="center"
+        />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerviewTerminos"
