--- a/app/src/main/res/layout/registro_signup.xml
+++ b/app/src/main/res/layout/registro_signup.xml
@@ -53,7 +53,7 @@
 
             <EditText
                 android:id="@+id/Nombres"
-                android:hint="@string/Nombres"
+                android:hint=""
                 android:inputType="textPersonName|textCapWords"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -85,7 +85,7 @@
 
             <EditText
                 android:id="@+id/Correo"
-                android:hint="@string/Correo"
+                android:hint=""
                 android:inputType="textEmailAddress"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -117,7 +117,7 @@
 
             <EditText
                 android:id="@+id/Contraseña"
-                android:hint="@string/Pass"
+                android:hint=""
                 android:inputType="textPassword"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -149,7 +149,7 @@
 
             <EditText
                 android:id="@+id/ConfirmarContra"
-                android:hint="@string/ConfirmarContra"
+                android:hint=""
                 android:inputType="textPassword"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
