--- a/app/src/main/res/layout/administrador_lista_materias.xml
+++ b/app/src/main/res/layout/administrador_lista_materias.xml
@@ -6,6 +6,29 @@
     android:layout_height="match_parent"
     tools:context=".Administrador.ListaMateria">
 
+    <androidx.appcompat.widget.Toolbar
+        android:id="@+id/toolbarMateria"
+        android:layout_width="match_parent"
+        android:layout_height="?attr/actionBarSize"
+        android:background="?attr/background"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0"
+        app:title="">
+        <ImageButton
+            android:id="@+id/btn_cerrar_sesion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/drawing_2"
+            android:contentDescription="@string/back_button_description"
+            style="?android:attr/borderlessButtonStyle"
+            android:onClick="onBackPressed" />
+    </androidx.appcompat.widget.Toolbar>
+
+
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerviewMaterias"
@@ -27,6 +50,7 @@
         android:textColor="@color/white"
         android:textSize="20sp"
         android:textStyle="bold"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.506"
