--- a/app/src/main/res/drawable/ic_launcher_background.xml
+++ b/app/src/main/res/drawable/ic_launcher_background.xml
@@ -1,170 +1,9 @@
-<?xml version="1.0" encoding="utf-8"?>
 <vector xmlns:android="http://schemas.android.com/apk/res/android"
-    android:width="108dp"
-    android:height="108dp"
-    android:viewportWidth="108"
-    android:viewportHeight="108">
+    android:width="132.36dp"
+    android:height="132.36dp"
+    android:viewportWidth="132.36"
+    android:viewportHeight="132.36">
     <path
-        android:fillColor="#3DDC84"
-        android:pathData="M0,0h108v108h-108z" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M9,0L9,108"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M19,0L19,108"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M29,0L29,108"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M39,0L39,108"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M49,0L49,108"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M59,0L59,108"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M69,0L69,108"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M79,0L79,108"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M89,0L89,108"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M99,0L99,108"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M0,9L108,9"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M0,19L108,19"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M0,29L108,29"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M0,39L108,39"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M0,49L108,49"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M0,59L108,59"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M0,69L108,69"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M0,79L108,79"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M0,89L108,89"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M0,99L108,99"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M19,29L89,29"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M19,39L89,39"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M19,49L89,49"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M19,59L89,59"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M19,69L89,69"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M19,79L89,79"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M29,19L29,89"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M39,19L39,89"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M49,19L49,89"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M59,19L59,89"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M69,19L69,89"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
-    <path
-        android:fillColor="#00000000"
-        android:pathData="M79,19L79,89"
-        android:strokeWidth="0.8"
-        android:strokeColor="#33FFFFFF" />
+        android:pathData="M63.78,99.87C42.85,98.63 28.23,78.26 33.46,57.63c1.82,-7.19 6.25,-13.75 12.4,-18.38 2.43,-1.83 8.02,-4.6 10.87,-5.38 17.31,-4.78 34.03,3.33 40.94,19.86 2.79,6.69 3.04,15.5 0.64,22.89 -4.15,12.8 -16.01,22.3 -29.02,23.24 -1.4,0.1 -3.87,0.1 -5.5,0.01zM73.19,97.9c13.53,-2.68 23.8,-14.25 25.3,-28.47 0.42,-3.97 0.34,-6.34 -0.28,-9.17 -2.38,-10.78 -8.34,-18.63 -17.65,-23.23 -10.89,-5.39 -23.27,-4.36 -33.36,2.76 -7.2,5.08 -12.24,13.65 -13.36,22.68 -1.37,11.07 3.61,22.85 12.48,29.53 7.78,5.87 16.93,7.87 26.87,5.9zM50,88.62c0.1,-1.08 0.07,-1.13 -0.72,-1.13h-0.82l0.19,-5.15c0.11,-2.83 0.5,-9.91 0.88,-15.73 0.38,-5.82 0.77,-13.16 0.88,-16.3l0.19,-5.72 4.86,0h4.86l0.18,-0.72c0.2,-0.78 1.12,-1.26 2.44,-1.26 0.95,0 0.98,-0.12 0.4,-1.51 -0.66,-1.59 -0.54,-2.56 0.45,-3.55 1.09,-1.09 2.16,-1.13 3.34,-0.14 0.94,0.79 1.07,1.63 0.61,4l-0.23,1.2 0.93,0c1.32,0 1.78,0.24 2.26,1.16l0.42,0.81 4.93,0c2.96,0 4.93,0.11 4.93,0.27 0,0.15 0.19,3.17 0.41,6.7 0.23,3.54 0.68,11.32 0.99,17.3 0.54,10.08 0.98,15.99 1.29,17.36 0.2,0.89 -0.18,1.19 -1.85,1.45 -1.49,0.23 -1.56,0.28 -1.64,1.16l-0.09,0.92L65,89.75 49.89,89.75ZM73.18,89.28 L79.56,89.09 79.74,88.3c0.18,-0.8 0.44,-0.92 2.67,-1.16 0.84,-0.09 0.84,-0.08 0.33,-6.14 -0.19,-2.25 -0.59,-8.73 -0.89,-14.39 -0.3,-5.67 -0.71,-12.81 -0.9,-15.88l-0.35,-5.57h-4.9,-4.9l0.19,1.78c0.27,2.54 0.17,2.59 -4.32,2.32 -1.97,-0.12 -3.84,-0.21 -4.16,-0.2 -0.31,0.01 -0.99,-0.04 -1.51,-0.12l-0.95,-0.14 0.19,-1.82 0.19,-1.82 -4.62,0 -4.62,0 -0.08,16.29c-0.04,8.96 -0.14,16.35 -0.2,16.42 -0.07,0.07 -0.14,-4.31 -0.15,-9.73 -0.02,-5.42 -0.08,-9.66 -0.13,-9.43 -0.18,0.76 -1.22,17.78 -1.41,23.07 -0.18,5.04 -0.17,5.15 0.38,5.15 0.53,0 0.58,-0.24 0.75,-3.32 0.1,-1.82 0.23,-3.51 0.28,-3.74 0.17,-0.77 0.11,4.32 -0.08,6.99l-0.19,2.61 8.21,-0c4.52,-0 11.08,-0.08 14.59,-0.19zM64.57,88.13c0.66,-0.06 1.68,-0.06 2.26,0 0.58,0.06 0.03,0.11 -1.21,0.11 -1.24,-0 -1.71,-0.05 -1.05,-0.11zM72.89,87.85c0.43,-0.06 1.06,-0.06 1.41,0 0.35,0.07 -0,0.12 -0.78,0.12 -0.78,-0 -1.06,-0.06 -0.63,-0.12zM77.69,87.58c0.27,-0.07 0.66,-0.07 0.85,0.01 0.19,0.08 -0.03,0.14 -0.5,0.13 -0.47,-0.01 -0.62,-0.07 -0.35,-0.14zM53.95,85.51c0,-0.39 0.06,-0.55 0.14,-0.35 0.08,0.19 0.08,0.51 0,0.71 -0.08,0.19 -0.14,0.04 -0.14,-0.35zM53.67,82.97c0,-0.39 0.06,-0.55 0.14,-0.35 0.08,0.19 0.08,0.51 0,0.71 -0.08,0.19 -0.14,0.04 -0.14,-0.35zM53.1,74.79c0,-0.39 0.06,-0.55 0.14,-0.35 0.08,0.19 0.08,0.51 0,0.71 -0.08,0.19 -0.14,0.04 -0.14,-0.35zM52.83,71.83c0.01,-0.47 0.07,-0.62 0.14,-0.35 0.07,0.27 0.07,0.66 -0.01,0.85 -0.08,0.19 -0.14,-0.03 -0.13,-0.5zM52.55,69c0.01,-0.47 0.07,-0.62 0.14,-0.35 0.07,0.27 0.07,0.66 -0.01,0.85 -0.08,0.19 -0.14,-0.03 -0.13,-0.5zM52.27,65.9c0.01,-0.47 0.07,-0.62 0.14,-0.35 0.07,0.27 0.07,0.66 -0.01,0.85 -0.08,0.19 -0.14,-0.03 -0.13,-0.5zM51.99,62.65c0,-0.54 0.06,-0.77 0.13,-0.49 0.07,0.27 0.07,0.72 0,0.99 -0.07,0.27 -0.13,0.05 -0.13,-0.49zM51.72,59.13c0,-0.62 0.06,-0.84 0.13,-0.49 0.07,0.35 0.06,0.86 -0.01,1.13 -0.07,0.27 -0.13,-0.02 -0.12,-0.64zM51.44,55.32c0,-0.7 0.06,-0.98 0.12,-0.63 0.07,0.35 0.07,0.92 0,1.27 -0.07,0.35 -0.12,0.06 -0.12,-0.63zM67.92,46.43c-0.32,-1.31 -0.63,-2.34 -0.69,-2.28 -0.13,0.13 0.47,3.14 0.81,4.04 0.49,1.3 0.44,0.56 -0.12,-1.76zM64.41,41.49c-0.24,-0.54 -0.51,-1.56 -0.62,-2.26 -0.14,-0.94 -0.25,-1.14 -0.41,-0.77 -0.14,0.3 0.02,1.24 0.41,2.43l0.63,1.93 -0.74,2.23c-0.41,1.23 -0.73,2.36 -0.72,2.51 0.01,0.15 0.44,-0.93 0.95,-2.4 0.89,-2.56 0.91,-2.73 0.5,-3.67zM67.07,42.83c-0.08,-0.19 -0.14,-0.04 -0.14,0.35 0,0.39 0.06,0.55 0.14,0.35 0.08,-0.19 0.08,-0.51 0,-0.71zM66.59,40.68c0.47,-1.94 0.05,-2.93 -1.19,-2.81 -0.86,0.08 -0.92,0.16 -1,1.27 -0.11,1.52 0.9,3.69 1.49,3.2 0.21,-0.17 0.53,-0.92 0.7,-1.66zM67.5,38.88c-0.26,-0.26 -0.33,-0.11 -0.34,0.64 -0,0.54 -0.06,1.29 -0.14,1.68 -0.07,0.39 0.08,0.1 0.34,-0.64 0.36,-1.03 0.4,-1.42 0.14,-1.68zM67.03,37.82c-0.28,-0.31 -0.65,-0.56 -0.82,-0.56 -0.17,0 0.01,0.25 0.4,0.56 0.91,0.71 1.07,0.71 0.42,0z"
+        android:fillColor="#000000"/>
 </vector>
