--- a/app/src/main/res/layout/item_termino.xml
+++ b/app/src/main/res/layout/item_termino.xml
@@ -93,6 +93,7 @@
             android:layout_height="20dp"
             android:layout_marginLeft="230dp"
             android:background="@drawable/lapiz_edicion"
+            android:visibility="gone"
             android:text="" />
     </RelativeLayout>
 </androidx.cardview.widget.CardView>
