--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,6 +3,8 @@
     <style name="Base.Theme.DSMProyectoCatedraAC180847MM200149MH192214GC180313" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <!-- <item name="colorPrimary">@color/my_light_primary</item> -->
+        <item name="background">@color/backGround</item>
+        <item name="color">@color/gray_personal</item>
     </style>
 
     <style name="Theme.DSMProyectoCatedraAC180847MM200149MH192214GC180313" parent="Base.Theme.DSMProyectoCatedraAC180847MM200149MH192214GC180313" />
